# course_proj

./: manage.py  pyproject.toml
course_egorov/: asgi.py  settings.py  urls.py  wsgi.py
horoscope/: converters.py  tests.py  urls.py  views.py
horoscope/templates/horoscope/: info_zodiac.html
